table from from by user

--- a/javascript/DOM/basic-templetes/basic83_RWD/index.html
+++ b/javascript/DOM/basic-templetes/basic83_RWD/index.html
@@ -579,47 +579,50 @@
     </div>
     <br>
 <div id=nav_bar>
-      <ul id = "lists">
-       
+      <ul>
+        <!-- <li> <a href="/basic83_RWD/index.html.html">HOME</a></li>
+        <li><a href="/basic83_RWD/index.html.html">CHARTS</a></li>
+        <li><a href="/basic83_RWD/index.html.html">ABOUT US</a></li>
+        <li><a href="/basic83_RWD/index.html.html">CONTACT</a></li> -->
       </ul>
     </div>
   </div>
- 
+<!-- 
     <div id=big_image>
-    <!-- <img src="download.jpeg" alt="avicii image"> -->
+    <img src="download.jpeg" alt="avicii image">
   </div> <br>
   <div id=images_row>
-    <div id=series class="smallBlock">
-      <!-- <img src="small.jpeg" alt="avicii"> -->
-      <!-- <figcaption>tim berling</figcaption> -->
-      <!-- <p> Tim Bergling, known professionally as Avicii, was a Swedish DJ, remixer, record producer, musician, and
+    <div id=series>
+      <img src="small.jpeg" alt="avicii">
+      <figcaption>tim berling</figcaption>
+      <p> Tim Bergling, known professionally as Avicii, was a Swedish DJ, remixer, record producer, musician, and
         songwriter. At the age of 16, Bergling began posting his remixes on electronic music forums, which led to his
-        first record deal.</p> -->
-      <!-- <a href="#">Read More>></a> -->
+        first record deal.</p>
+      <a href="#">Read More>></a>
     </div>
-    <div id="second"  class="smallBlock">
-      <!-- <img src="small.jpeg" alt="avicii"> -->
-      <!-- <figcaption>tim berling</figcaption> -->
-      <!-- <p> Tim Bergling, known professionally as Avicii, was a Swedish DJ, remixer, record producer, musician, and
+    <div id="second">
+      <img src="small.jpeg" alt="avicii">
+      <figcaption>tim berling</figcaption>
+      <p> Tim Bergling, known professionally as Avicii, was a Swedish DJ, remixer, record producer, musician, and
         songwriter. At the age of 16, Bergling began posting his remixes on electronic music forums, which led to his
-        first record deal.</p> -->
-      <!-- <a href="#">Read More>></a> -->
+        first record deal.</p>
+      <a href="#">Read More>></a>
     </div>
-    <div id=third  class="smallBlock">
-      <!-- <img src="small.jpeg" alt="avicii"> -->
-      <!-- <figcaption>tim berling</figcaption> -->
-      <!-- <p> Tim Bergling, known professionally as Avicii, was a Swedish DJ, remixer, record producer, musician, and
+    <div id=third>
+      <img src="small.jpeg" alt="avicii">
+      <figcaption>tim berling</figcaption>
+      <p> Tim Bergling, known professionally as Avicii, was a Swedish DJ, remixer, record producer, musician, and
         songwriter. At the age of 16, Bergling began posting his remixes on electronic music forums, which led to his
-        first record deal.</p> -->
-      <!-- <a href="#">Read More>></a> -->
+        first record deal.</p>
+      <a href="#">Read More>></a>
     </div>
-    <div id=four  class="smallBlock">
-      <!-- <img src="small.jpeg" alt="avicii"> -->
-      <!-- <figcaption>tim berling</figcaption> -->
-      <!-- <p> Tim Bergling, known professionally as Avicii, was a Swedish DJ, remixer, record producer, musician, and
+    <div id=four>
+      <img src="small.jpeg" alt="avicii">
+      <figcaption>tim berling</figcaption>
+      <p> Tim Bergling, known professionally as Avicii, was a Swedish DJ, remixer, record producer, musician, and
         songwriter. At the age of 16, Bergling began posting his remixes on electronic music forums, which led to his
-        first record deal.</p> -->
-      <!-- <a href="#">Read More>></a> -->
+        first record deal.</p>
+      <a href="#">Read More>></a>
     </div>
   </div>
    <div id=last>
@@ -650,7 +653,7 @@
       <span id=copy>all copyrights to avicii </span> <span id=footer_srh>go SRH</span>
     </article>
   </footer> -->
-  <script  src="./script.js" > </script>
+  <script  src="script.js" > </script>
 </body>
 
 </html>
