--- a/Assignments/Check Box/T-83/checkBox.html
+++ b/Assignments/Check Box/T-83/checkBox.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
+<html lang="en" dir="ltr">
 
 <head>
+    <title>SpaceX</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./spaceX_style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
 
-<body>
+<body style="background-color: white;">
+    <div class="wrapper row1">
+        <header id="header" class="clear">
+            <div id="hgroup">
+                <h1><a href="#">SpaceX</a></h1>
+                <h2>AeroSpace Company</h2>
+            </div>
+            <form action="#" method="post">
+                <fieldset>
+                    <legend>Search:</legend>
+                    <input type="text" value="Search Our Website&hellip;"
+                        onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
+                    <input type="submit" id="sf_submit" value="submit">
+                </fieldset>
+            </form>
+            <nav>
+                <ul id="demo">
+                    <li><a href="./T83_spaceX_User_details.html">Home</a></li>
+                    <li><a href="#">Dragon</a></li>
+                    <li><a href="#">Starship</a></li>
+                    <li><a href="#">Registers</a></li>
+                    <li class="last"><a href="./index.html">Users Details</a></li>
+
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <p></p>
     <div class="container">
         <div class="row">
             <div class="col">
@@ -61,9 +90,16 @@
 
         <button type="button" class="btn btn-primary" onclick="getAllDetails()">Submit</button>
 
-    </div>
+    </div><br>
 
-<script src="script.js "></script>
+    <div class="wrapper row3">
+        <footer id="footer" class="clear">
+            <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+            <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/"
+                    title="Free Website Templates">Hari Vardhan</a></p>
+        </footer>
+    </div>
+   <script src="./script.js"></script>
 </body>
 
 </html>
