--- a/Assignments/Assignment CRUD API's - localstorage/accessing nested objects in API's/object experiment/index.html
+++ b/Assignments/Assignment CRUD API's - localstorage/accessing nested objects in API's/object experiment/index.html
@@ -92,7 +92,7 @@
 <script src="./httprequest.js"></script>
 <script src="./display.js"></script>
 <script src="./edituser.js"></script>
-<!-- <script src="./updateUser.js"></script> -->
+<script src="./updateUser.js"></script>
 <script src="./delete.js"></script>
 <script src="./validate.js"></script>
 </html>
