--- a/Java Scritp/DOM/10k crud api copy/api 2/index2.html
+++ b/Java Scritp/DOM/10k crud api copy/api 2/index2.html
@@ -12,32 +12,32 @@
 
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row"> 
             <div class="col">
                 <form>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Id</label>
-                        <input type="text" class="form-control" id="Id" />
+                        <input type="text" class="form-control" id="id" />
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">Title</label>
-                        <input type="text" class="form-control" id="Title" />
+                        <input type="text" class="form-control" id="title" />
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">Price</label>
-                        <input type="text" class="form-control" id="Price" />
+                        <input type="text" class="form-control" id="price" />
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">Description</label>
-                        <input type="text" class="form-control" id="Description" />
+                        <input type="text" class="form-control" id="description" />
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">Category</label>
-                        <input type="text" class="form-control" id="Category" />
+                        <input type="text" class="form-control" id="category" />
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">Image</label>
-                        <input type="text" class="form-control" id="Image" />
+                        <input type="text" class="form-control" id="image" />
                     </div>
                     <button type="button" onclick="updatePerson()" class="btn btn-primary" id="update">
                         Update
