--- a/Java Scritp/DOM/10k crud api copy/api 3/index2.html
+++ b/Java Scritp/DOM/10k crud api copy/api 3/index2.html
@@ -17,28 +17,36 @@
                 <form>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Serial</label>
-                        <input type="text" class="form-control" id="Serial" />
+                        <input type="text" class="form-control" id="id" />
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="Email" />
+                        <input type="email" class="form-control" id="email" />
                     </div>
 
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="Fname" />
+                        <label for="exampleInputEmail1" class="form-label">User Name</label>
+                        <input type="text" class="form-control" id="username" />
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">Password</label>
-                        <input type="text" class="form-control" id="Password" />
+                        <input type="text" class="form-control" id="password" />
+                    </div>
+                    <!-- <div class=" mb-3">
+                        <label for="exampleInputEmail1" class="form-label">First name</label>
+                        <input type="text" class="form-control" id="firstname" />
                     </div>
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">User Name</label>
-                        <input type="text" class="form-control" id="User" />
+                        <label for="exampleInputEmail1" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="lastname" />
+                    </div> -->
+                    <div class=" mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" />
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">Phone</label>
-                        <input type="text" class="form-control" id="Phone" />
+                        <input type="text" class="form-control" id="phone" />
                     </div>
                     <button type="button" onclick="updatePerson()" class="btn btn-primary" id="update">
                         Update
@@ -51,11 +59,11 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Serial No</th>
+                            <th>Id</th>
                             <th>Email</th>
-                            <th>First Name</th>
-                            <th>Last Name</th>
                             <th>User Name</th>
+                            <th>Password</th>
+                            <th>Name</th>
                             <th>Phone</th>
                             <th>Edit</th>
                             <th>Delete</th>
