--- a/Java Scritp/DOM/10k crud api copy/api 10/index2.html
+++ b/Java Scritp/DOM/10k crud api copy/api 10/index2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API 9</title>
+    <title>API 10</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
@@ -16,42 +16,33 @@
             <div class="col">
                 <form>
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Id</label>
-                        <input type="text" class="form-control" id="id" />
+                        <label for="exampleInputEmail1" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="fname" />
                     </div>
 
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" />
+                        <label for="exampleInputEmail1" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="lname" />
                     </div>
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">User Name</label>
-                        <input type="text" class="form-control" id="username" />
-                    </div>
-                    <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" />
+                        <label for="exampleInputEmail1" class="form-label">Tel</label>
+                        <input type="text" class="form-control" id="tel" />
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">Address</label>
-                        <input type="text" class="form-control" id="street" />
-                        <input type="text" class="form-control" id="suite" />
+                        <input type="email" class="form-control" id="address" />
+                    </div>
+                    <div class=" mb-3">
+                        <label for="exampleInputEmail1" class="form-label">City</label>
                         <input type="text" class="form-control" id="city" />
-                        <input type="text" class="form-control" id="Zipcode" />
-                        <input type="text" class="form-control" id="lat" />
-                        <input type="text" class="form-control" id="ing" />
                     </div>
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Phone</label>
-                        <input type="text" class="form-control" id="phone" />
+                        <label for="exampleInputEmail1" class="form-label">State</label>
+                        <input type="text" class="form-control" id="state" />
                     </div>
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Website</label>
-                        <input type="text" class="form-control" id="website" />
-                    </div>
-                    <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Company</label>
-                        <input type="text" class="form-control" id="company" />
+                        <label for="exampleInputEmail1" class="form-label">Zip</label>
+                        <input type="text" class="form-control" id="zip" />
                     </div>
                     <button type="button" onclick="updatePerson()" class="btn btn-primary" id="update">
                         Update
@@ -64,14 +55,13 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Id</th>
-                            <th>Name</th>
-                            <th>User Name</th>
-                            <th>Email</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>tel</th>
                             <th>Address</th>
-                            <th>Phone</th>
-                            <th>Website</th>
-                            <th>Company</th>
+                            <th>City</th>
+                            <th>State</th>
+                            <th>Zip</th>
                             <th>Edit</th>
                             <th>Delete</th>
                         </tr>
