--- a/Java Scritp/DOM/10k crud api copy/api 11/index2.html
+++ b/Java Scritp/DOM/10k crud api copy/api 11/index2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API 9</title>
+    <title>API 11</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
@@ -21,37 +21,16 @@
                     </div>
 
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" />
+                        <label for="exampleInputEmail1" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" />
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">User Name</label>
                         <input type="text" class="form-control" id="username" />
                     </div>
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" />
-                    </div>
-                    <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Address</label>
-                        <input type="text" class="form-control" id="street" />
-                        <input type="text" class="form-control" id="suite" />
-                        <input type="text" class="form-control" id="city" />
-                        <input type="text" class="form-control" id="Zipcode" />
-                        <input type="text" class="form-control" id="lat" />
-                        <input type="text" class="form-control" id="ing" />
-                    </div>
-                    <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Phone</label>
-                        <input type="text" class="form-control" id="phone" />
-                    </div>
-                    <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Website</label>
-                        <input type="text" class="form-control" id="website" />
-                    </div>
-                    <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Company</label>
-                        <input type="text" class="form-control" id="company" />
+                        <label for="exampleInputEmail1" class="form-label">Password</label>
+                        <input type="text" class="form-control" id="password" />
                     </div>
                     <button type="button" onclick="updatePerson()" class="btn btn-primary" id="update">
                         Update
@@ -65,13 +44,9 @@
                     <thead>
                         <tr>
                             <th>Id</th>
-                            <th>Name</th>
-                            <th>User Name</th>
                             <th>Email</th>
-                            <th>Address</th>
-                            <th>Phone</th>
-                            <th>Website</th>
-                            <th>Company</th>
+                            <th>User Name</th>
+                            <th>Password</th>
                             <th>Edit</th>
                             <th>Delete</th>
                         </tr>
