--- a/Java Scritp/DOM/10k crud api copy/api 12/index2.html
+++ b/Java Scritp/DOM/10k crud api copy/api 12/index2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API 7</title>
+    <title>API 12</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
@@ -15,22 +15,22 @@
         <div class="row">
             <div class="col">
                 <form>
-                    <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Album Id</label>
-                        <input type="text" class="form-control" id="aid" />
-                    </div>
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Title</label>
-                        <input type="text" class="form-control" id="title" />
+                        <label for="exampleInputEmail1" class="form-label">Id</label>
+                        <input type="text" class="form-control" id="id" />
                     </div>
 
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Url</label>
-                        <input type="text" class="form-control" id="url" />
+                        <label for="exampleInputEmail1" class="form-label">User Id</label>
+                        <input type="text" class="form-control" id="userId" />
                     </div>
                     <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Thumbnail Url</label>
-                        <input type="text" class="form-control" id="thumbnailUrl" />
+                        <label for="exampleInputEmail1" class="form-label">Date</label>
+                        <input type="text" class="form-control" id="date" />
+                    </div>
+                    <div class=" mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Products</label>
+                        <input type="text" class="form-control" id="products" />
                     </div>
                     <button type="button" onclick="updatePerson()" class="btn btn-primary" id="update">
                         Update
@@ -43,10 +43,10 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Album Id</th>
-                            <th>Title</th>
-                            <th>Url</th>
-                            <th>Thumbnail Url</th>
+                            <th>Id</th>
+                            <th>Email</th>
+                            <th>User Name</th>
+                            <th>Password</th>
                             <th>Edit</th>
                             <th>Delete</th>
                         </tr>
