--- a/Java Scritp/DOM/10k crud api copy/api 5/index2.html
+++ b/Java Scritp/DOM/10k crud api copy/api 5/index2.html
@@ -17,7 +17,7 @@
                 <form>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Id</label>
-                        <input type="number" class="form-control" id="id" />
+                        <input type="text" class="form-control" id="id" />
                     </div>
                     <div class=" mb-3">
                         <label for="exampleInputEmail1" class="form-label">Name</label>
