--- a/Javascript/Apis/Api3/index.html
+++ b/Javascript/Apis/Api3/index.html
@@ -71,7 +71,7 @@
     <script src="./api.js"></script>
     <script src="./display.js"></script>
     <script src="./delete.js"></script>
-    <script src="./edite.js"></script>
+    <script src="./edit.js"></script>
     <script src="./update.js"></script>
     <script src="./clear.js"></script>
 </body>
