--- a/javascript/localserver-api's/fakestore1/fakestore1.html
+++ b/javascript/localserver-api's/fakestore1/fakestore1.html
@@ -20,8 +20,9 @@
             <table class="table">
                 <thead>
                   <tr>
-                    <th scope="col">#</th>
                     <th scope="col">address</th>
+                    <th scope="col">id</th>
+
                     <th scope="col">email</th>
                     <th scope="col">username</th>
                     <th scope="col">password</th>
