--- a/java script/API_CRUD/FAKE_STORE/users/CRUD_users.html
+++ b/java script/API_CRUD/FAKE_STORE/users/CRUD_users.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">APIS</a>
+            <a class="navbar-brand" href="#">APIS_USERS</a>
         </div>
     </nav>
     <div class="container-fluid">
