--- a/java script/API_CRUD/FAKE_STORE/products/PRODUCT_CRUD.html
+++ b/java script/API_CRUD/FAKE_STORE/products/PRODUCT_CRUD.html
@@ -45,23 +45,27 @@
                 <form>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">title</label>
-                        <input type="email" class="form-control" id="title" aria-describedby="emailHelp">
+                        <input type="text" class="form-control" id="title">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">price</label>
-                        <input type="email" class="form-control" id="price" aria-describedby="emailHelp">
+                        <input type="number" class="form-control" id="price">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">DESCRIPTION</label>
-                        <input type="email" class="form-control" id="description" aria-describedby="emailHelp">
+                        <input type="text" class="form-control" id="description">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">category</label>
-                        <input type="email" class="form-control" id="category" aria-describedby="emailHelp">
+                        <input type="text" class="form-control" id="category">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">image</label>
-                        <input type="email" class="form-control" id="image" aria-describedby="emailHelp">
+                        <input type="image" class="form-control" id="image">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">id</label>
+                        <input type="number" class="form-control" id="id">
                     </div>
                     <button type="buttion" class="btn btn-primary">Submit</button>
                 </form>
