--- a/java script/API_CRUD/FAKE_STORE/products/PRODUCT_CRUD.html
+++ b/java script/API_CRUD/FAKE_STORE/products/PRODUCT_CRUD.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">price</label>
-                        <input type="number" class="form-control" id="price">
+                        <input type="number" step="any/" class="form-control" id="price">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">DESCRIPTION</label>
@@ -61,13 +61,13 @@
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">image</label>
-                        <input type="image" class="form-control" id="image">
+                        <input type="link" class="form-control" id="image">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">id</label>
                         <input type="number" class="form-control" id="id">
                     </div>
-                    <button type="buttion" class="btn btn-primary">Submit</button>
+                    <button type="buttion" class="btn btn-primary" onclick="updateProducts()">Submit</button>
                 </form>
             </div>
 
