--- a/practice/simple calculator/index.html
+++ b/practice/simple calculator/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
-    <meta charset="UTF-8">
+    <!-- <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>simple calculator</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <table border="2 solid red" id="mytable">
+        <caption>simple calculator</caption>
+        <tr>
+            <td colspan="3"><input  id="res" placeholder="enter value"></td>
+            <td><button type="button" onclick="ac()">AC</button></td>
+        </tr>
+        <tr>
+            <td><button  onclick="show('1')">1</button></td>
+            <td><button type="button" onclick="show('2')">2</button></td>
+            <td><button type="button" onclick="show('3')">3</button></td>
+            <td><button type="button" onclick="show('+')"> + </button></td>
+        </tr>
+        <tr>
+            <td><button  onclick="show('4')">4</button></td>
+            <td><button  onclick="show('5')">5</button></td>
+            <td><button  onclick="show('6')">6</button></td>
+            <td><button  onclick="show('-')">-</button></td>
+        </tr>
+        <tr>
+            <td><button  onclick="show('7')">7</button></td>
+            <td><button  onclick="show('8')">8</button></td>
+            <td><button  onclick="show('9')">9</button></td>
+            <td><button  onclick="show('*')">*</button></td>
+        </tr>
+        <tr>
+            <td><button  onclick="show('0')">0</button></td>
+            <td><button  onclick="show('%')">%</button></td>
+            <td><button  onclick="show('/')">/</button></td>
+            <td><button  onclick="cal('=')">=</button></td>
+        </tr>
+    </table> 
+    <script src="./script.js"></script>
 </body>
+
 </html>
