--- a/API_CRUD/API_CRUD/FILL_TEXT/1.html
+++ b/API_CRUD/API_CRUD/FILL_TEXT/1.html
@@ -36,19 +36,19 @@
                 <form>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">body</label>
-                        <input type="email" class="form-control" id="body" aria-describedby="emailHelp">
+                        <input type="" class="form-control" id="body" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">id</label>
-                        <input type="email" class="form-control" id="id" aria-describedby="emailHelp">
+                        <input type="number" class="form-control" id="id" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">title</label>
-                        <input type="email" class="form-control" id="title" aria-describedby="emailHelp">
+                        <input type="" class="form-control" id="title" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">userId</label>
-                        <input type="email" class="form-control" id="userId" aria-describedby="emailHelp">
+                        <input type="" class="form-control" id="userId" aria-describedby="emailHelp">
                     </div>
                     <button type="button" class="btn btn-primary" onclick="updatePost()">Submit</button>
                 </form>
