--- a/javascript/api's-promise method/json3/json3.html
+++ b/javascript/api's-promise method/json3/json3.html
@@ -58,7 +58,7 @@
     </div>
   </div>
     <script>
-        let API_URL = "http://localhost:3000/json3/";
+        let API_URL = "http://localhost:3000/js3/";
 var allUsers = [];
 function getAllUsers() {
   return new Promise((success)=>{
