--- a/javascript/api's-promise method/json4/json4.html
+++ b/javascript/api's-promise method/json4/json4.html
@@ -68,7 +68,7 @@
         </div>
     </div>
     <script>
-        let API_URL = "http://localhost:3000/json4/";
+        let API_URL = "http://localhost:3000/js4/";
         var allUsers = [];
         function getAllUsers() {
             return new Promise((success)=>{
