--- a/javascript/api's-promise method/filltext1/fillapi.html
+++ b/javascript/api's-promise method/filltext1/fillapi.html
@@ -54,7 +54,7 @@
     </div>
   </div>
     <script>
-      let API_URL = "http://localhost:3000/filltext1/";
+      let API_URL = "http://localhost:3000/filltextapi1/";
 var allUsers = [];
 function getAllUsers() {
   return new Promise((success)=>{
