--- a/javascript/api's-promise method/filltext2/fillapi2.html
+++ b/javascript/api's-promise method/filltext2/fillapi2.html
@@ -79,7 +79,7 @@
     </div>
   </div>
     <script>
-      let API_URL = "http://localhost:3000/filltext2/";
+      let API_URL = "http://localhost:3000/filltextapi2/";
 var allUsers = [];
 function getAllUsers() {
   return new Promise((success)=>{
