--- a/javascript/api's-promise method/filltext3/fillapi3.html
+++ b/javascript/api's-promise method/filltext3/fillapi3.html
@@ -59,7 +59,7 @@
     </div>
   </div>
     <script>
-      let API_URL = "http://localhost:3000/filltext3/";
+      let API_URL = "http://localhost:3000/filltextapi3/";
 var allUsers = [];
 function getAllUsers() {
   return new Promise((success)=>{
