--- a/javascript/api's-promise method/json5/json5.html
+++ b/javascript/api's-promise method/json5/json5.html
@@ -61,7 +61,7 @@
     </div>
   </div>
     <script>
-        let API_URL = "http://localhost:3000/js5/";
+        let API_URL = "http://localhost:3000/json5/";
 var allUsers = [];
 function getAllUsers() {
   return new Promise((success)=>{
