--- a/javascript/api's-promise method/json1/json1.html
+++ b/javascript/api's-promise method/json1/json1.html
@@ -61,7 +61,7 @@
     </div>
   </div>
     <script>
-      let API_URL = "http://localhost:3000/js1/";
+      let API_URL = "http://localhost:3000/json1/";
 var allUsers = [];
 function getAllUsers() {
   return new Promise((success)=>{
