--- a/javascript/api's-promise method/json2/json2.html
+++ b/javascript/api's-promise method/json2/json2.html
@@ -66,7 +66,7 @@
     </div>
   </div>
     <script>
-       let API_URL = "http://localhost:3000/js2/";
+       let API_URL = "http://localhost:3000/json2/";
 var allUsers = [];
 function getAllUsers() {
   return new Promise((success)=>{
