--- a/javascript/api's-promise method/json6/json6.html
+++ b/javascript/api's-promise method/json6/json6.html
@@ -85,7 +85,7 @@
     </div>
   </div>
     <script>
-        let API_URL = "http://localhost:3000/js6/";
+        let API_URL = "http://localhost:3000/json6/";
 var allUsers = [];
 function getAllUsers() {
   return new Promise((success)=>{
