--- a/API_CRUD/API_CRUD/FILL_TEXT/1.html
+++ b/API_CRUD/API_CRUD/FILL_TEXT/1.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">id</label>
-                        <input type="number" class="form-control" id="id" aria-describedby="emailHelp">
+                        <input type="" class="form-control" id="id" aria-describedby="emailHelp">
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">title</label>
