completed all the API's on Promise and Async

--- a/Javascript/API_CRUD_PROMISE/Json_place/photos/photos_db10.html
+++ b/Javascript/API_CRUD_PROMISE/Json_place/photos/photos_db10.html
@@ -34,13 +34,13 @@
               </div>
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">URL</label>
-                <input type="phone" class="form-control" id="url" aria-describedby="emailHelp">
+                <input type="text" class="form-control" id="url" aria-describedby="emailHelp">
               </div> 
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Thumbnail URL</label>
                 <input type="phone" class="form-control" id="thumbnailUrl" aria-describedby="emailHelp">
               </div>        
-            <button type="button" class="btn btn-primary" onclick="updateUser()">Submit</button>
+            <button type="text" class="btn btn-primary" onclick="updateUser()">Submit</button>
           </form>
     </div>    
 
